--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/profile_button"
             android:layout_marginLeft="0dp"
             android:layout_marginStart="0dp"
             android:orientation="horizontal">
@@ -35,7 +32,6 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="bottom|start"
-                android:layout_weight="1"
                 android:onClick="goProfile"
                 android:text="@string/profile" />
 
@@ -46,7 +42,6 @@
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/profile_button"
                 android:layout_toEndOf="@+id/profile_button"
-                android:layout_weight="0.50"
                 android:onClick="report"
                 android:text="@string/submit_report" />
                 <!--app:layout_anchor="@+id/include"-->
@@ -66,14 +61,14 @@
                 android:id="@+id/graphButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:onClick="createGraph"
                 android:text="@string/create_graph"
                 android:layout_marginRight="13dp"
                 android:layout_marginEnd="13dp"
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/button6"
-                android:layout_toStartOf="@+id/button6" />
+                android:layout_toStartOf="@+id/button6"
+                tools:ignore="RelativeOverlap" />
 
         </RelativeLayout>
 
@@ -83,15 +78,13 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_weight="1"
-            tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.controllers.MapsActivity" />
+            tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.controllers.MapsActivity"
+            tools:ignore="InefficientWeight" />
 
         <Button
             android:id="@+id/logout_button"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             android:layout_gravity="top|end"
             android:onClick="logout"
             android:text="@string/logout"
