--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_registration.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_registration.xml
@@ -80,10 +80,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:id="@+id/radioGroup"
-                android:layout_below="@+id/classStandingTextView"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft = "true">
+                android:id="@+id/radioGroup">
                 <RadioButton android:id="@+id/user_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
