--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_submit_purity_report.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_submit_purity_report.xml
@@ -10,32 +10,46 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.controllers.SubmitReportActivity">
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:layout_below="@+id/typeGroup"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout">
+
+    </LinearLayout>
+
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/typeGroup"
         android:layout_marginTop="18dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2">
+        android:layout_below="@+id/textView3"
+        android:layout_alignRight="@+id/textView3"
+        android:layout_alignEnd="@+id/textView3">
 
     </RadioGroup>
 
     <Button
-        android:text="@string/cancel"
+        android:text="Cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button5"
+        android:layout_weight="1"
         android:onClick="cancelReport"
         android:layout_alignTop="@+id/conditionGroup"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp" />
 
     <Button
-        android:text="@string/submit"
+        android:text="Submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button4"
+        android:layout_weight="1"
         android:onClick="submitReport"
         android:layout_alignBaseline="@+id/button5"
         android:layout_alignBottom="@+id/button5"
@@ -46,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
-        android:text="@string/virus_ppm"
+        android:text="Virus PPM"
         android:layout_marginBottom="40dp"
         android:layout_above="@+id/button5"
         android:layout_toLeftOf="@+id/typeGroup"
@@ -56,10 +70,11 @@
         android:id="@+id/editLoc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/linearLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:ems="10"
-        android:hint="@string/location"
+        android:hint="Location"
         android:inputType="text" />
 
     <EditText
@@ -68,7 +83,7 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/editVirusPPM"
-        android:hint="@string/virus_ppm"
+        android:hint="Virus PPM"
         android:layout_marginTop="17dp"
         android:layout_below="@+id/editContamination"
         android:layout_alignParentLeft="true"
@@ -79,8 +94,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/contamination_ppm"
+        android:hint="Contamination PPM"
         android:inputType="textPersonName"
+        android:layout_below="@+id/linearLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="11dp" />
@@ -99,17 +115,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/safe"
-            android:text="@string/safe" />
+            android:text="Safe" />
 
         <RadioButton
-            android:text="@string/treatable"
+            android:text="Treatable"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/treatable"
             android:layout_weight="1" />
 
         <RadioButton
-            android:text="@string/unsafe"
+            android:text="Unsafe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/unsafe" />
@@ -117,7 +133,7 @@
     </RadioGroup>
 
     <TextView
-        android:text="@string/condition_of_water"
+        android:text="Condition of Water"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView4"
